<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="start|center_vertical"
    android:padding="16dp"
    android:background="@android:color/transparent">

    <TextView
        android:id="@+id/text_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/its_text"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/text_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/hours_text"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/text_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/minutes"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold" />

</LinearLayout>